--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,12 @@ target
 tmp
 .history
 dist
-/.idea
-/*.iml
-/out
-/.idea_modules
-/.classpath
-/.project
-/RUNNING_PID
+.idea
+*.iml
+out
+.idea_modules
+.classpath
+.project
+RUNNING_PID
+.settings
+.target
